# EmiriEngine

./: CMakeLists.txt  CMakeSettings.json  main.cpp
Core/config/: Config.h  ConfigImplJson.cpp
Core/logger/: ConsoleLog.cpp  Logger.cpp  Logger.h
Core/utl/: allocator.h  async.h  async_linux.cpp  async_windows.cpp  common.h  deque.h  entt.h  hash_map.h  image.h  input.h  io.h  memory.h  rcc_resource.cpp  resource.h  string.h  test.h  time.h  vector.h
Render/: RenderContext.cpp  RenderContext.h
Render/DirectX/: DxRenderContext.cpp  DxRenderContext.h  dx_common.h
Render/Vulkan/: VkRenderContext.cpp  VkRenderContext.h  VkSwapChain.cpp  VkSwapChain.h  helper.h  vk_common.h
Server/: ServerBase.cpp  ServerBase.h  ServerBaseLinux.cpp  ServerBaseWindows.cpp
